--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --disable-host-check --host $IP --port $PORT",
+    "start": "ng serve --disable-host-check --host $IP --port $PORT --public-host https://learning-angular-stormwild.c9users.io/",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
